--- a/index.html
+++ b/index.html
@@ -2,73 +2,33 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SubMain</title>
+<title>SubMain - Retail Pro Prism</title>
 <style>
-  body { font-family: Arial, sans-serif; padding: 20px; }
-  #bot-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: #007bff;
-    color: white;
-    font-size: 24px;
-    border: none;
-    cursor: pointer;
-    z-index: 1000;
-  }
+  #bot-iframe { position:fixed; bottom:20px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; }
 </style>
 </head>
 <body>
-
 <h1>SubMain Page</h1>
-<p>这里是 SubMain 内容。</p>
 
-<button id="bot-button">💬</button>
+<iframe id="bot-iframe"></iframe>
 
-<!-- ✅ 官方 v3.5 CDN -->
-<script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js"></script>
 <script>
-const entry = "SubMain";
-let initialized = false;
+  const urlParams = new URLSearchParams(window.location.search);
+  const entry = urlParams.get('entry') || 'default';
 
-function initBotpress() {
-  if (!initialized && window.botpressWebChat) {
-    window.botpressWebChat.init({
-      botId: "XSX123E9",
-      hostUrl: "https://messaging.botpress.cloud",
-      messagingUrl: "https://messaging.botpress.cloud",
-      showPoweredBy: false,
-      enableConversationDeletion: false,
-      extraData: { entry } // 传给 Flow
-    });
-    initialized = true;
-  }
-}
+  const botIframe = document.getElementById('bot-iframe');
+  const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
 
-document.getElementById('bot-button').addEventListener('click', () => {
-  // 确保 botpressWebChat 已加载
-  if (!window.botpressWebChat) {
-    console.error("Botpress Webchat not loaded yet!");
-    return;
-  }
+  // 加载 iframe
+  botIframe.src = botUrl;
 
-  initBotpress();
-
-  // 打开聊天窗口
-  window.botpressWebChat.open();
-
-  // 发送自定义事件
-  window.botpressWebChat.sendEvent({
-    type: "custom",
-    channel: "web",
-    payload: { entry }
-  });
-});
+  // 等 iframe load 后发送 entry
+  botIframe.onload = () => {
+    botIframe.contentWindow.postMessage(
+      { type: 'custom', payload: { entry } },
+      '*'
+    );
+  };
 </script>
-
 </body>
 </html>
