--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SubMain - Retail Pro Prism</title>
 <style>
-  #bot-iframe { position:fixed; bottom:20px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; }
+  body { font-family: Arial, sans-serif; padding: 20px; }
+  #bot-iframe { position: fixed; bottom: 20px; right: 20px; width: 400px; height: 500px; border: 1px solid #ccc; border-radius: 8px; }
 </style>
 </head>
 <body>
+
 <h1>SubMain Page</h1>
+<p>这里是 SubMain 内容。</p>
 
 <iframe id="bot-iframe"></iframe>
 
 <script>
+  // 从 URL 拿 entry
   const urlParams = new URLSearchParams(window.location.search);
-  const entry = urlParams.get('entry') || 'default';
+  const entry = urlParams.get('entry') || 'Default';
 
   const botIframe = document.getElementById('bot-iframe');
   const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
@@ -22,13 +27,18 @@
   // 加载 iframe
   botIframe.src = botUrl;
 
-  // 等 iframe load 后发送 entry
+  // iframe load 后发送 entry
   botIframe.onload = () => {
     botIframe.contentWindow.postMessage(
-      { type: 'custom', payload: { entry } },
+      {
+        type: 'custom',
+        channel: 'web',
+        payload: { entry }
+      },
       '*'
     );
   };
 </script>
+
 </body>
 </html>
