--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script>
   // 从 URL 拿 entry
   const urlParams = new URLSearchParams(window.location.search);
-  const entry = urlParams.get('entry') || 'Default';
+  const entry = urlParams.get('entry') || 'Default111';
 
   const botIframe = document.getElementById('bot-iframe');
   const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
