--- a/index.html
+++ b/index.html
@@ -45,14 +45,26 @@
   const botButton = document.getElementById('bot-button');
   const botIframe = document.getElementById('bot-iframe');
 
-  // 这里是你的 Botpress 配置 JSON 链接
+  // Botpress 配置 JSON
   const botConfigUrl = "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
 
   botButton.addEventListener('click', () => {
     if (botIframe.style.display === 'none') {
-      // 第一次点击时加载 iframe
-      botIframe.src = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=${encodeURIComponent(botConfigUrl)}&entry=SubMain`;
+      // 第一次加载 iframe
+      botIframe.src = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=${encodeURIComponent(botConfigUrl)}`;
       botIframe.style.display = 'block';
+
+      // 等 iframe 加载完成，再发送自定义事件
+      botIframe.onload = () => {
+        botIframe.contentWindow.postMessage(
+          {
+            type: 'custom',
+            channel: 'web',
+            payload: { entry: 'SubMain' }
+          },
+          '*'
+        );
+      };
     } else {
       botIframe.style.display = 'none';
     }
