--- a/index.html
+++ b/index.html
@@ -6,29 +6,14 @@
 <title>SubMain - Retail Pro Prism</title>
 <style>
   body { font-family: Arial, sans-serif; padding: 20px; }
-  #bot-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: #007bff;
-    color: white;
-    font-size: 24px;
-    border: none;
-    cursor: pointer;
-    z-index: 1000;
-  }
   #bot-iframe {
     position: fixed;
-    bottom: 90px;
+    bottom: 20px;
     right: 20px;
     width: 400px;
     height: 500px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    display: none;
     z-index: 999;
   }
 </style>
@@ -38,37 +23,27 @@
 <h1>SubMain Page</h1>
 <p>这里是 SubMain 内容。</p>
 
-<button id="bot-button">💬</button>
 <iframe id="bot-iframe"></iframe>
 
 <script>
-  const botButton = document.getElementById('bot-button');
   const botIframe = document.getElementById('bot-iframe');
 
-  // Botpress 配置 JSON
   const botConfigUrl = "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
 
-  botButton.addEventListener('click', () => {
-    if (botIframe.style.display === 'none') {
-      // 第一次加载 iframe
-      botIframe.src = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=${encodeURIComponent(botConfigUrl)}`;
-      botIframe.style.display = 'block';
+  // 自动加载 iframe
+  botIframe.src = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=${encodeURIComponent(botConfigUrl)}`;
 
-      // 等 iframe 加载完成，再发送自定义事件
-      botIframe.onload = () => {
-        botIframe.contentWindow.postMessage(
-          {
-            type: 'custom',
-            channel: 'web',
-            payload: { entry: 'SubMain' }
-          },
-          '*'
-        );
-      };
-    } else {
-      botIframe.style.display = 'none';
-    }
-  });
+  // 等 iframe 加载完，发送自定义事件
+  botIframe.onload = () => {
+    botIframe.contentWindow.postMessage(
+      {
+        type: 'custom',
+        channel: 'web',
+        payload: { entry: 'SubMain' }
+      },
+      '*'
+    );
+  };
 </script>
 
 </body>
