--- a/index.html
+++ b/index.html
@@ -28,22 +28,13 @@
 <script>
   const botIframe = document.getElementById('bot-iframe');
 
-  const botConfigUrl = "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
+  // Cloud Botpress v3.5 shareable iframe URL
+  // extraParams.entry = SubMain → Execute Code Node workflow.entry 会收到
+  const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=" +
+                 encodeURIComponent("https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json") +
+                 "&extraParams=" + encodeURIComponent(JSON.stringify({ entry: "SubMain" }));
 
-  // 自动加载 iframe
-  botIframe.src = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=${encodeURIComponent(botConfigUrl)}`;
-
-  // 等 iframe 加载完，发送自定义事件
-  botIframe.onload = () => {
-    botIframe.contentWindow.postMessage(
-      {
-        type: 'custom',
-        channel: 'web',
-        payload: { entry: 'SubMain' }
-      },
-      '*'
-    );
-  };
+  botIframe.src = botUrl;
 </script>
 
 </body>
