--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SubMain - Retail Pro Prism</title>
+<title>SubMain Page</title>
 <style>
   body { font-family: Arial, sans-serif; padding: 20px; }
-  #bot-iframe {
+  #bot-button {
     position: fixed;
     bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #007bff;
+    color: white;
+    font-size: 24px;
+    border: none;
+    cursor: pointer;
+    z-index: 1000;
+  }
+  #bot-iframe {
+    position: fixed;
+    bottom: 100px;
     right: 20px;
     width: 400px;
     height: 500px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    display: none;
     z-index: 999;
   }
 </style>
@@ -21,20 +36,27 @@
 <body>
 
 <h1>SubMain Page</h1>
-<p>这里是 SubMain 内容。</p>
+<p>点击按钮启动 Botpress。</p>
 
+<button id="bot-button">💬</button>
 <iframe id="bot-iframe"></iframe>
 
 <script>
-  const botIframe = document.getElementById('bot-iframe');
+const botButton = document.getElementById('bot-button');
+const botIframe = document.getElementById('bot-iframe');
 
-  // Cloud Botpress v3.5 shareable iframe URL
-  // extraParams.entry = SubMain → Execute Code Node workflow.entry 会收到
-  const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=" +
-                 encodeURIComponent("https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json") +
-                 "&extraParams=" + encodeURIComponent(JSON.stringify({ entry: "SubMain" }));
+// ✅ 这是唯一有效 URL，extraParams 会传入 event.payload.entry
+const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json&extraParams=" + encodeURIComponent(JSON.stringify({ entry: "SubMain" }));
 
-  botIframe.src = botUrl;
+let botLoaded = false;
+
+botButton.addEventListener('click', () => {
+  if (!botLoaded) {
+    botIframe.src = botUrl;
+    botLoaded = true;
+  }
+  botIframe.style.display = botIframe.style.display === 'none' ? 'block' : 'none';
+});
 </script>
 
 </body>
