--- a/index.html
+++ b/index.html
@@ -1,35 +1,12 @@
+<!-- SubMain.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SubMain Page</title>
+<title>SubMain</title>
 <style>
-  #bot-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: #007bff;
-    color: white;
-    font-size: 24px;
-    border: none;
-    cursor: pointer;
-    z-index: 1000;
-  }
-  #bot-iframe {
-    position: fixed;
-    bottom: 90px;
-    right: 20px;
-    width: 400px;
-    height: 500px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    display: none;
-    z-index: 999;
-  }
+#bot-button { position: fixed; bottom: 20px; right: 20px; width:60px; height:60px; border-radius:50%; background:#007bff; color:#fff; font-size:24px; border:none; cursor:pointer; }
+#bot-iframe { position:fixed; bottom:90px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; display:none; }
 </style>
 </head>
 <body>
@@ -39,26 +16,21 @@
 <iframe id="bot-iframe"></iframe>
 
 <script>
-const entry = "SubMain"; // 这里设置要显示的名称
-const botIframe = document.getElementById('bot-iframe');
 const botButton = document.getElementById('bot-button');
+const botIframe = document.getElementById('bot-iframe');
+const entry = "SubMain"; // ✅ 你想显示的名字
 const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
 
 botButton.addEventListener('click', () => {
   if (botIframe.style.display === 'none') {
     botIframe.src = botUrl;
     botIframe.style.display = 'block';
-
-    // 等 iframe 加载完再发送自定义事件
     botIframe.onload = () => {
-      botIframe.contentWindow.postMessage(
-        {
-          type: 'custom',
-          channel: 'web',
-          payload: { entry: entry } // ❗ 发送 entry
-        },
-        '*'
-      );
+      botIframe.contentWindow.postMessage({
+        type: 'custom',
+        channel: 'web',
+        payload: { entry: entry } // ✅ 关键：把 entry 发送给 Botpress
+      }, '*');
     };
   } else {
     botIframe.style.display = 'none';
