--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 <body>
 <h1>SubMain Page</h1>
 
-<!-- 打开 Botpress -->
+<!-- Botpress Webchat iframe -->
 <iframe id="bot-iframe" style="width:400px;height:500px;border:1px solid #ccc;"></iframe>
 
 <script>
-const entry = "SubMain"; // 你想显示的名字
-const botUrlBase = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
+  // 你想传给 Botpress 的 entry
+  const entry = "SubMain";
 
-// 把 entry 放进 URL 参数
-document.getElementById('bot-iframe').src = `${botUrlBase}&entry=${entry}`;
+  // Botpress shareable webchat 配置 URL
+  const botUrlBase = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
+
+  // 把 entry 放进 URL 参数，Cloud Botpress 会自动传到 event.payload.entry
+  document.getElementById('bot-iframe').src = `${botUrlBase}&entry=${entry}`;
 </script>
 </body>
 </html>
