--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <!-- Botpress Webchat iframe -->
 <iframe id="bot-iframe" style="width:400px;height:500px;border:1px solid #ccc;"></iframe>
 
+<script src="https://cdn.botpress.cloud/webchat/v3/inject.js"></script>
 <script>
-  // 你想传给 Botpress 的 entry
-  const entry = "SubMain";
-
-  // Botpress shareable webchat 配置 URL
-  const botUrlBase = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
-
-  // 把 entry 放进 URL 参数，Cloud Botpress 会自动传到 event.payload.entry
-  document.getElementById('bot-iframe').src = `${botUrlBase}&entry=${entry}`;
+  window.botpressWebChat.init({
+    botId: "XSX123E9",
+    hostUrl: "https://messaging.botpress.cloud",
+    messagingUrl: "https://messaging.botpress.cloud",
+    showPoweredBy: false,
+    extraParams: { entry: "SubMain" } // 这里传递 entry
+  })
 </script>
+
 </body>
 </html>
