--- a/index.html
+++ b/index.html
@@ -4,36 +4,32 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SubMain</title>
-<style>
-  body { font-family: Arial, sans-serif; padding: 40px; }
-  #welcome { font-size: 28px; color: #007bff; }
-  #info { margin-top: 20px; font-size: 18px; }
-</style>
 </head>
 <body>
 
-<h1 id="welcome">Welcome!</h1>
-<p id="info">This page simulates SubMain.</p>
+<h1>SubMain Page</h1>
+<button id="bot-button">💬 Open Bot</button>
+<iframe id="bot-iframe" style="display:none;width:400px;height:500px;"></iframe>
 
 <script>
-  // 从 URL 获取 entry 参数
-  const params = new URLSearchParams(window.location.search);
-  const entry = params.get('entry') || 'Default';
-  
-  // 显示欢迎信息
-  document.getElementById('welcome').innerText = `Welcome to ${entry}!`;
-  
-  // 调试输出
-  console.log('Entry:', entry);
+const entry = 'SubMain';
+const botButton = document.getElementById('bot-button');
+const botIframe = document.getElementById('bot-iframe');
 
-  // 点击按钮跳 SubMain
-window.botpressWebChat.sendEvent({
-  type: 'custom',
-  channel: 'web',
-  payload: { entry: 'SubMain' } // 这里的 entry 就会被 Execute Code Node 获取
+const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
+
+botButton.addEventListener('click', () => {
+  if (botIframe.style.display === 'none') {
+    // 第一次加载 iframe 并把 entry 放在 extraParams
+    if (!botIframe.src) {
+      const params = encodeURIComponent(JSON.stringify({ entry }));
+      botIframe.src = botUrl + `&extraParams=${params}`;
+    }
+    botIframe.style.display = 'block';
+  } else {
+    botIframe.style.display = 'none';
+  }
 });
-
-  
 </script>
 
 </body>
