--- a/index.html
+++ b/index.html
@@ -113,19 +113,20 @@ Click here to apply!
 </body>
 <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script>
-  window.botpressWebChat.init({
-      "composerPlaceholder": "Chat with bot",
-      "botConversationDescription": "This chatbot was built surprisingly fast with Botpress",
-      "botId": "da359935-a341-4c1d-bc05-cbdbd10a5444",
-      "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
-      "messagingUrl": "https://messaging.botpress.cloud",
-      "clientId": "da359935-a341-4c1d-bc05-cbdbd10a5444",
-      "lazySocket": true,
-      "hideWidget":true,
-      "useSessionStorage": true,
-      "enableConversationDeletion": true,
-      "showPoweredBy": true
-  });
+window.botpressWebChat.init({
+    composerPlaceholder: "Chat with bot",
+    botConversationDescription: "This is my bot",
+    botId: "XSX123E9",  // 你的 botId
+    hostUrl: "https://messaging.botpress.cloud", // 你的 hostUrl
+    messagingUrl: "https://messaging.botpress.cloud",
+    clientId: "XSX123E9", // 你的 clientId
+    lazySocket: true,
+    hideWidget: true,
+    useSessionStorage: true,
+    enableConversationDeletion: true,
+    showPoweredBy: true
+});
+
 </script>
 
 
