--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Botpress Test</title>
+</head>
 <body>
-<button id>"triggerBotAction1">Button1</button>
-<button id>"triggerBotAction2">Button2</button>
+
+<button id="triggerBotAction1">Button1</button>
+<button id="triggerBotAction2">Button2</button>
+
+<script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js"></script>
+<script>
+  window.botpressWebChat.init({
+    configUrl: "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json"
+  })
+
+  // 示例：按钮触发 Botpress 事件
+  document.getElementById("triggerBotAction1").onclick = () => {
+    window.botpressWebChat.sendEvent({
+      type: "proactive-trigger",
+      payload: { action: "button1" }
+    })
+  }
+
+  document.getElementById("triggerBotAction2").onclick = () => {
+    window.botpressWebChat.sendEvent({
+      type: "proactive-trigger",
+      payload: { action: "button2" }
+    })
+  }
+</script>
 
 </body>
-<script scr="https://cdn.botpress.cloud/webchat/v2.S/inject.js"></script>
-<script scr="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json">
-</script>
 </html>
