--- a/index.html
+++ b/index.html
@@ -11,24 +11,30 @@
 
 <script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js"></script>
 <script>
-  window.botpressWebChat.init({
-    configUrl: "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json"
+  window.addEventListener("load", () => {
+    if (!window.botpressWebChat) {
+      console.error("Botpress failed to load")
+      return
+    }
+
+    window.botpressWebChat.init({
+      configUrl: "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json"
+    })
+
+    document.getElementById("triggerBotAction1").onclick = () => {
+      window.botpressWebChat.sendEvent({
+        type: "proactive-trigger",
+        payload: { action: "button1" }
+      })
+    }
+
+    document.getElementById("triggerBotAction2").onclick = () => {
+      window.botpressWebChat.sendEvent({
+        type: "proactive-trigger",
+        payload: { action: "button2" }
+      })
+    }
   })
-
-  // 示例：按钮触发 Botpress 事件
-  document.getElementById("triggerBotAction1").onclick = () => {
-    window.botpressWebChat.sendEvent({
-      type: "proactive-trigger",
-      payload: { action: "button1" }
-    })
-  }
-
-  document.getElementById("triggerBotAction2").onclick = () => {
-    window.botpressWebChat.sendEvent({
-      type: "proactive-trigger",
-      payload: { action: "button2" }
-    })
-  }
 </script>
 
 </body>
