--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Botpress Test</title>
+  <title>Botpress Hardcoded Trigger</title>
 </head>
 <body>
 
@@ -10,38 +10,13 @@
 <button id="triggerBotAction2">Button2</button>
 
 <script>
-  // 等 inject.js 加载完成后再执行
-  function onBotpressReady() {
-    console.log('Webchat is ready');
-
-    document.getElementById('triggerBotAction1').addEventListener('click', async () => {
-      const customerPayload = { trigger: "action1" };
-      console.log('Sending payload:', customerPayload);
-
-      await window.botpressWebChat.sendEvent({
-        type: "proactive-trigger",
-        payload: customerPayload
-      });
-    });
-
-    document.getElementById('triggerBotAction2').addEventListener('click', async () => {
-      const customerPayload = { trigger: "action2" };
-      console.log('Sending payload:', customerPayload);
-
-      await window.botpressWebChat.sendEvent({
-        type: "proactive-trigger",
-        payload: customerPayload
-      });
-    });
-  }
-
-  // 动态加载 inject.js
+  // 延迟加载 inject.js
   const script = document.createElement('script');
   script.src = "https://cdn.botpress.cloud/webchat/v3.5/inject.js";
   script.async = true;
   script.onload = () => {
     if (!window.botpressWebChat) {
-      console.error("Botpress failed to load");
+      console.error("Botpress failed to load: check HTTPS or hosting");
       return;
     }
 
@@ -50,8 +25,17 @@
       configUrl: "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json"
     });
 
-    // 模拟你原来的 on('webchat:ready')
-    onBotpressReady();
+    console.log("Webchat is ready");
+
+    document.getElementById('triggerBotAction1').addEventListener('click', async () => {
+      await window.botpressWebChat.sendEvent({ type: "proactive-trigger", payload: { trigger: "action1" } });
+      console.log("Sent action1");
+    });
+
+    document.getElementById('triggerBotAction2').addEventListener('click', async () => {
+      await window.botpressWebChat.sendEvent({ type: "proactive-trigger", payload: { trigger: "action2" } });
+      console.log("Sent action2");
+    });
   };
   document.body.appendChild(script);
 </script>
