--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Botpress Test</title>
 </head>
 <body>
@@ -9,37 +9,45 @@
 <button id="triggerBotAction1">Button1</button>
 <button id="triggerBotAction2">Button2</button>
 
-<iframe id="bot-iframe" style="display:none; position:fixed; bottom:100px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; z-index:1000;"></iframe>
+<script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js" data-bot-id="XSX123E9" data-config-url="https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json"></script>
 
 <script>
-  const botIframe = document.getElementById('bot-iframe');
-  const botBaseUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html";
-  const botConfigUrl = "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
-
-  // 模拟原来的 on 'webchat:ready'
-  console.log("Webchat is ready (simulated, using iframe)");
-
-  // triggerBotAction1 点击事件
-  document.getElementById('triggerBotAction1').addEventListener('click', async () => {
-    const customerPayload = { trigger: "action1" };
-    console.log('Sending payload:', customerPayload);
-
-    // iframe 懒加载 + 显示
-    if (!botIframe.src) {
-      botIframe.src = `${botBaseUrl}?configUrl=${encodeURIComponent(botConfigUrl)}&trigger=${customerPayload.trigger}`;
+  // 等 inject.js 加载完成
+  window.addEventListener("load", () => {
+    if (!window.botpressWebChat) {
+      console.error("Botpress failed to load");
+      return;
     }
-    botIframe.style.display = botIframe.style.display === 'none' ? 'block' : 'none';
-  });
 
-  // triggerBotAction2 点击事件
-  document.getElementById('triggerBotAction2').addEventListener('click', async () => {
-    const customerPayload = { trigger: "action2" };
-    console.log('Sending payload:', customerPayload);
+    // 初始化 webchat
+    window.botpressWebChat.init({
+      configUrl: "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json"
+    });
 
-    if (!botIframe.src) {
-      botIframe.src = `${botBaseUrl}?configUrl=${encodeURIComponent(botConfigUrl)}&trigger=${customerPayload.trigger}`;
-    }
-    botIframe.style.display = botIframe.style.display === 'none' ? 'block' : 'none';
+    // 模拟原本结构
+    console.log("Webchat is ready (on load)");
+
+    // triggerBotAction1
+    document.getElementById('triggerBotAction1').addEventListener('click', async () => {
+      const customerPayload = { trigger: "action1" };
+      console.log('Sending payload:', customerPayload);
+
+      await window.botpressWebChat.sendEvent({
+        type: "proactive-trigger",
+        payload: customerPayload
+      });
+    });
+
+    // triggerBotAction2
+    document.getElementById('triggerBotAction2').addEventListener('click', async () => {
+      const customerPayload = { trigger: "action2" };
+      console.log('Sending payload:', customerPayload);
+
+      await window.botpressWebChat.sendEvent({
+        type: "proactive-trigger",
+        payload: customerPayload
+      });
+    });
   });
 </script>
 
